[gd_scene load_steps=2 format=3 uid="uid://coa4eapun1x1n"]

[ext_resource type="Script" uid="uid://ojaos2rqb4u3" path="res://Assets/Scripts/UI/Menus/MainMenuUi.gd" id="1_hias0"]

[node name="MainMenuUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hias0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 286.0
offset_right = 251.0
offset_bottom = 326.0
alignment = 1

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
